[package]
name = "tsastat"
version = "0.1.0"
edition = "2021"
description = "Thread State Analysis tool using Linux Netlink taskstats"
authors = ["Ankur Rathore <rathore.ankur@gmail.com>"]

[dependencies]
netlink-sys = "0.8" 
byteorder = "1.5" 
libc = "0.2"
anyhow = "1.0"
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }